# Robot-Omni-Navigation

./: .gitignore  README.md  Readme.md  move.sh  my_nav_recovery.xml  navGUI.py  room1.txt
install/: local_setup.sh  setup.sh
install/robot_omni/share/robot_omni/: package.sh
install/robot_omni/share/robot_omni/config/: bridge_config.yaml  nav2_para.yaml  omni.lua
install/robot_omni/share/robot_omni/launch/: localization.launch.py  master_launch.py  nav4.launch.py
install/robot_omni/share/robot_omni/urdf/: omni_base.urdf
log/: latest_build
src/robot_omni/: CMakeLists.txt  Readme.md  package.xml
src/robot_omni/config/: configuration.yaml
src/robot_omni/launch/: cartographer.launch.py  gazebo_control.launch.py  master_launch.py  navigation.launch.py  teleop.launch.py
src/robot_omni/maps/: my_map.pgm  my_map.yaml
