<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_omni</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="tof@todo.todo">tof</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend> -->

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>ros_gz_sim</depend> 
  <depend>ros_gz_bridge</depend>
  <depend>controller_manager</depend>
  <depend>robot_state_publisher</depend>
  <depend>cartographer_ros</depend>
  <depend>tf2_ros</depend>
  <depend>tf_transformations</depend>
  <depend>nav2_simple_commander</depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>rviz_imu_plugin</exec_depend>
  <exec_depend>slambot_localization</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
